--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1,4 +1,12 @@
-@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "../../../node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/functions";
+
+$primary: #2f5f32;
+
+$theme-colors: map-merge($theme-colors, (
+  "primary": $primary
+));
 
 #root {
     width: 100%;
@@ -10,12 +18,12 @@
 }
   
 html, body {
-width: 100%;
-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
-*, *::before, *::after {
-box-sizing: border-box;
+*, *::before, *::after, *:hover {
+    box-sizing: border-box;
 }
 
 #root {
@@ -42,4 +50,17 @@ box-sizing: border-box;
     background-color: #fff;
     opacity: 0.8;
     padding: 1.5rem;
+}
+
+.interactive_text {
+    &:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+}
+
+.hoverablecard {
+    &:hover {
+        cursor: pointer;
+    }
 }
