transparency issue fixed

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13053,9 +13053,19 @@ html, body {
 }
 
 .whitecontainer {
+  position: relative;
+  background-position: center;
+  z-index: 1;
+}
+.whitecontainer::before {
+  content: "";
   background-color: #fff;
   opacity: 0.8;
-  padding: 1.5rem;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: absolute;
+  display: block;
 }
 
 .interactive_text:hover {
