--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13076,3 +13076,19 @@ html, body {
 .hoverablecard:hover {
   cursor: pointer;
 }
+
+.roleimage {
+  border: 2px solid black;
+}
+
+.secondarysection {
+  position: relative;
+}
+.secondarysection::before {
+  content: "";
+  position: absolute;
+  background-color: #2c7c5e;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+}
