--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -75,3 +75,20 @@ html, body {
         cursor: pointer;
     }
 }
+
+.roleimage {
+    border: 2px solid black;
+}
+
+.secondarysection {
+    position: relative;
+
+    &::before {
+        content: "";
+        position: absolute;
+        background-color: #2c7c5e;
+        width: 100%;
+        height: 100%;
+        opacity: 0.2;
+    }
+}
