--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13015,16 +13015,12 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-#root {
+html {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   height: 100%;
 }
 
-html, body {
+body {
   width: 100%;
   height: 100%;
 }
@@ -13040,6 +13036,13 @@ html, body {
   background-size: cover;
   position: relative;
   z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
 }
 #root::before {
   content: "";
