--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13086,6 +13086,7 @@ body {
 
 .secondarysection {
   position: relative;
+  z-index: 1;
 }
 .secondarysection::before {
   content: "";
@@ -13094,4 +13095,5 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0.2;
+  z-index: -5;
 }
