--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13022,7 +13022,24 @@ html {
 
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  display: flex;
+  background-image: url("../images/randobackground.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+}
+body::before {
+  content: "";
+  background-color: #000;
+  opacity: 0.8;
+  width: 100%;
+  min-height: 100%;
+  z-index: -1;
+  position: absolute;
+  display: block;
 }
 
 *, *::before, *::after, *:hover {
@@ -13030,29 +13047,12 @@ body {
 }
 
 #root {
-  background-image: url("../images/randobackground.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  z-index: 1;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: auto;
-}
-#root::before {
-  content: "";
-  background-color: #000;
-  opacity: 0.8;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  position: absolute;
-  display: block;
 }
 
 .whitecontainer {
