--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -15,38 +15,40 @@ html {
 
 body {
     width: 100%;
-    height: 100%;
-}
+    min-height: 100%;
+    display: flex;
 
-*, *::before, *::after, *:hover {
-    box-sizing: border-box;
-}
-
-#root {
     background-image: url("../images/randobackground.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     z-index: 1;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: auto;
 
     &::before {
         content: "";
         background-color: #000;
         opacity: 0.8;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         z-index: -1;
         position: absolute;
         display: block;
     }
+}
+
+
+*, *::before, *::after, *:hover {
+    box-sizing: border-box;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .whitecontainer {
