--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -64,7 +64,7 @@ body {
         height: 100%;
         z-index: -1;
         position: absolute;
-        display: ;
+        display: block;
     }
 }
 
