changing to work sans + isntall framer motion: npx sass ./src/assets/scss/custom.scss ./src/assets/css/custom.css --watch qq
m

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1,4 +1,8 @@
 $primary: #2f5f32;
+$font-family-base: 'Work Sans';
+$font-weight-light: 400;
+$font-weight-normal: 500;
+$font-weight-bold: 700; 
 
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "../../../node_modules/bootstrap/scss/variables";
