--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -57,7 +57,6 @@ body {
 
 .whitecontainer {
     position: relative;
-    background-position: center;
     z-index: 1;
     
     &::before {
@@ -117,4 +116,8 @@ body {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.hscreen {
+    height: 100vh;
 }
