--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -11959,4 +11959,9 @@ body::before {
   height: 100vh;
 }
 
+.main-title {
+  font-size: 6rem;
+  font-weight: 700;
+}
+
 /*# sourceMappingURL=custom.css.map */
