--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -121,3 +121,15 @@ body {
 .hscreen {
     height: 100vh;
 }
+
+.main-title {
+    font-size: 6rem;
+    font-weight: 700;
+}
+
+// @media screen and (max-width: 576px) {
+//     .main-title {
+//         font-size: 3rem;
+//     }
+// }
+
