--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -41,6 +41,12 @@ body {
     }
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 
 *, *::before, *::after, *:hover {
     box-sizing: border-box;
@@ -132,4 +138,8 @@ body {
 //         font-size: 3rem;
 //     }
 // }
+
+.villager-pos {
+    left: 100px
+}
 
