--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -159,3 +159,12 @@ ul {
 //     }
 // }
 
+#rulesdialog {
+    background-color: #000;
+    color: #000;
+
+    h5 {
+        color: white;
+    }
+}
+
